# RAGPersonalAssistant

./: README.md  embedding.py  llm_integration.py  main.py  myRef.txt  pyproject.toml  requirements.txt  reset_vectorstore.py  retriever.py  vectorStore.py
data/csv_files/: Languages.csv  Recommendations_Received.csv  Volunteering.csv
data/json_files/: portfolio.json
data/textfiles/: aboutme.txt  background.txt  projects.txt
notebook/: document.ipynb
